# gotopt2

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  TODO.md  WORKSPACE  go.mod  go.sum  multitool.lock.json  update_opts.diff
.bcr/: metadata.template.json
.github/workflows/: publish-bcr.yml  publish.yml  release.yml  tag-and-release.yml  test.yml  workflow.yml
.jules/: sentinel.md
cmd/gotopt2/: BUILD.bazel  gotopt2_help_test.sh  gotopt2_test.bats  gotopt2_test.sh  main.go  main_test.go
cmd/gotopt2-generator/: BUILD.bazel  compare_test.sh  main.go  parser.fish.tmpl  parser.sh.tmpl
docs/: tutorial.md
integration/: BUILD.bazel  MODULE.bazel  example.yaml  my_script.sh  my_script_test.sh  test.sh  usage_check.sh  usage_test.yaml
pkg/opts/: BUILD.bazel  bench_test.go  opts.go  opts_test.go
