load("@bazel_gazelle//:def.bzl", "gazelle")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

# gazelle:prefix github.com/filmil/gotopt2
gazelle(name = "gazelle")

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

alias(
    name = "bin",
    actual = "@multitool//tools/gotopt2",
    visibility = [ "//visibility:public" ],
)
