load("@gotopt2//build:macros.bzl", "run_gotopt2_sample")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_gotopt2_sample(
    name = "example",
)

# Verifies that the above target `:example` returned something in a file, which
# should only happen if we can use the `gotopt2` binary.
sh_test(
    name = "example_test",
    srcs = [ "test.sh" ],
    args = [
        "$(location :example)",
    ],
    data = [
        ":example",
    ],
)


load("@gotopt2//build:gotopt2.bzl", "gotopt2_generate_bash")

gotopt2_generate_bash(
    name = "example_parser",
    src = "example.yaml",
    out = "example_parser.sh",
)

sh_test(
    name = "example_parser_test",
    srcs = [ "test.sh" ],
    args = [
        "$(location :example_parser)",
    ],
    data = [
        ":example_parser",
    ],
)


load("@rules_shell//shell:sh_library.bzl", "sh_library")

sh_library(
    name = "example_parser_lib",
    srcs = ["example_parser.sh"],
)

sh_test(
    name = "my_script_test",
    srcs = ["my_script_test.sh"],
    args = [
        "$(location my_script.sh)",
        "$(location :example_parser)",
    ],
    data = [
        "my_script.sh",
        ":example_parser_lib",
        ":example_parser",
    ],
)

gotopt2_generate_bash(
    name = "usage_parser",
    src = "usage_test.yaml",
    out = "usage_parser.sh",
    generator = "@gotopt2//cmd/gotopt2-generator",
)

sh_library(
    name = "usage_parser_lib",
    srcs = ["usage_parser.sh"],
)

sh_test(
    name = "usage_check_test",
    srcs = ["usage_check.sh"],
    args = [
        "$(location :usage_parser)",
    ],
    data = [
        ":usage_parser",
        ":usage_parser_lib",
    ],
)
