module(
    name = "integration",
    version = "0.0.0",
)

bazel_dep(name = "gotopt2", version = "2.1.4")
local_path_override(
    module_name = "gotopt2",
    path = "../",
)

# rules_shell
bazel_dep(name = "rules_shell", version = "0.6.1")

# multitool setup for the generated workspace to access tools
bazel_dep(name = "rules_multitool", version = "1.11.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
use_repo(multitool, "multitool")
