load("@bazel_bats//:rules.bzl", "bats_test")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//build:my_package_name.bzl", "name_part_from_command_line")

go_library(
    name = "gotopt2_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/gotopt2/cmd/gotopt2",
    visibility = ["//visibility:private"],
    deps = ["//pkg/opts"],
)

go_binary(
    name = "gotopt2",
    embed = [":gotopt2_lib"],
    visibility = ["//visibility:public"],
)

bats_test(
    name = "gotopt2_test",
    srcs = ["gotopt2_test.bats"],
    env = {
        # This is the local path to the gotopt binary in the sandbox. It is
        # not clear to me how to get the non-hardcoded path.
        "GOTOPT2": "./cmd/gotopt2/gotopt2_/gotopt2",
    },
    deps = [":gotopt2"],
)

sh_test(
    name = "gotopt_test_sh",
    srcs = ["gotopt2_test.sh"],
    args = [
        "$(location :gotopt2)",
        "--foo=bar",
    ],
    data = [":gotopt2"],
)

sh_test(
    name = "gotopt_help_test_sh",
    srcs = ["gotopt2_help_test.sh"],
    args = [
        "$(location :gotopt2)",
        "--help",
    ],
    data = [":gotopt2"],
)

name_part_from_command_line(
    name = "name_part_from_command_line",
    build_setting_default = "@set_me@",
)

pkg_zip(
    name = "zip",
    srcs = [
        ":gotopt2",
    ],
    package_dir = "gotopt2",
    package_file_name = "gotopt2-{name_part}.zip",
    package_variables = ":name_part_from_command_line",
)
