load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "opts",
    srcs = ["opts.go"],
    importpath = "github.com/filmil/gotopt2/pkg/opts",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:go_default_library"],
)

go_test(
    name = "opts_test",
    srcs = ["opts_test.go"],
    embed = [":opts"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
